search bar color

--- a/css/stanley.css
+++ b/css/stanley.css
@@ -2,4 +2,7 @@ nav {
   background-color: #efefef;
   height: 150px; }
 
+.search-bar {
+  background-color: #cecece; }
+
 /*# sourceMappingURL=stanley.css.map */
