--- a/css/stanley.css
+++ b/css/stanley.css
@@ -3,6 +3,8 @@ nav {
   height: 150px; }
 
 .search-bar {
-  background-color: #cecece; }
+  background-color: #cecece;
+  padding-top: 15px;
+  padding-bottom: 15px; }
 
 /*# sourceMappingURL=stanley.css.map */
