use spacing classes

--- a/css/stanley.css
+++ b/css/stanley.css
@@ -3,8 +3,6 @@ nav {
   height: 150px; }
 
 .search-bar {
-  background-color: #cecece;
-  padding-top: 15px;
-  padding-bottom: 15px; }
+  background-color: #cecece; }
 
 /*# sourceMappingURL=stanley.css.map */
