--- a/css/stanley.css
+++ b/css/stanley.css
@@ -1,55 +1,17 @@
-/*
-Error: File to import not found or unreadable: card.
-       Load path: /Volumes/fmitchellssdbackup/Dropbox/brightplum_sites/stanley-access/sass
-        on line 4 of sass/stanley.scss
+body {
+  background-color: #efefef; }
 
-1: @import 'base';
-2: @import 'nav';
-3: @import 'search-bar';
-4: @import 'card';
+nav {
+  background-color: #efefef;
+  height: 150px; }
 
-Backtrace:
-sass/stanley.scss:4
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:67:in `rescue in import'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:45:in `import'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:28:in `imported_file'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/import_node.rb:37:in `css_import?'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:313:in `visit_import'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `block in visit'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `block in with_base'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/stack.rb:115:in `with_frame'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/stack.rb:79:in `with_base'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:160:in `visit'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `map'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:169:in `block in visit_children'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:181:in `with_environment'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:168:in `visit_children'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:188:in `visit_root'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/base.rb:36:in `visit'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:159:in `visit'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:36:in `css_tree'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/tree/root_node.rb:29:in `render_with_sourcemap'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/engine.rb:381:in `_render_with_sourcemap'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/engine.rb:298:in `render_with_sourcemap'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:492:in `update_stylesheet'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `call'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/usr/local/var/rbenv/versions/2.2.0/lib/ruby/gems/2.2.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: File to import not found or unreadable: card.\A        Load path: /Volumes/fmitchellssdbackup/Dropbox/brightplum_sites/stanley-access/sass\A         on line 4 of sass/stanley.scss\A \A 1: @import 'base';\A 2: @import 'nav';\A 3: @import 'search-bar';\A 4: @import 'card';"; }
+.search-bar {
+  background-color: #cecece; }
+
+.card {
+  background-image: url(../img/blog-card-bgimg.png);
+  background-repeat: no-repeat;
+  background-size: 48px 48px;
+  background-position: right 10px top 10px; }
+
+/*# sourceMappingURL=stanley.css.map */
