--- a/css/stanley.css
+++ b/css/stanley.css
@@ -9,7 +9,7 @@ nav {
   background-color: #cecece; }
 
 .card {
-  background-image: url(../img/blog-card-bgimg.png);
+  background-image: url(../img/blog-post-bgimg.png);
   background-repeat: no-repeat;
   background-size: 48px 48px;
   background-position: right 10px top 10px; }
