--- a/sass/_blog-card.scss
+++ b/sass/_blog-card.scss
@@ -1,4 +1,4 @@
-.card {
+.blog-card {
   background-image: url(../img/blog-post-bgimg.png);
   background-repeat: no-repeat;
   background-position: right 0 top 0;
